fix: process columns in dependency order with incremental JS context updates (#6427)
* test(metadata): cover TableMetadata#getColumns ordering

Add tests for column ordering by position, alphabetical tie-break,
system-columns-last and inheritance merging; also fix
validTableMetadataName, which lacked @Test and never actually ran.

Co-Authored-By: jhhaanstra <janhendrikhaanstra@gmail.com>
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* feat(metadata): add Column#hasDependencyOn

Reports whether a column's computed, default, required, validation or
visible expression references another column, so callers can process
columns in dependency order.

Co-Authored-By: jhhaanstra <janhendrikhaanstra@gmail.com>
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* fix(sql): evaluate column expressions against up-to-date row context

SqlRowProcessor built the JavaScript evaluation context once, before any
column was processed, and iterated columns in declaration order, so
computed values and applied defaults were never fed back. Visibility,
required and validation expressions depending on those columns evaluated
against stale nulls — silently dropping required fields or raising
spurious required errors.

Process columns in dependency order (Column#hasDependencyOn) and refresh
the context after each column via the new
JavascriptContextBuilder#updateContext, so later expressions see current
values.

Co-Authored-By: jhhaanstra <janhendrikhaanstra@gmail.com>
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* cleanup(sql): Remove unused code

* test(sql): rename JavascriptContextTest to JavascriptContextBuilderTest

Mirror the class under test: move the test alongside JavascriptContextBuilder
in the org.molgenis.emx2.sql package, and drop the superseded single-test
processors/JavascriptContextBuilderTest stub, whose one test this file
already covers.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

---------

Co-authored-by: Aike <4234850+aikevd@user