@@ -1,33 +1,53 @@
 package org.molgenis.emx2.sql;
 
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Supplier;
 import org.molgenis.emx2.Column;
 import org.molgenis.emx2.Reference;
 import org.molgenis.emx2.Row;
 
+/**
+ * Builds the variable context for evaluating column expressions (computed values, default values,
+ * validation scripts, visibility rules) against a {@link Row}.
+ *
+ * <p>Values are keyed by {@link Column#getIdentifier()} (camelCase) so they are valid JavaScript
+ * identifiers. Reference columns become nested maps; file columns are omitted. Database-level
+ * bindings (e.g. current user) are merged in last.
+ */
 public class JavascriptContextBuilder {
 
   private JavascriptContextBuilder() {
     // hide constructor
   }
 
+  /**
+   * Converts {@code row} to a {@code Map<identifier, value>} ready for use in Javascript
+   * interactions.
+   *
+   * @param columns Columns that should be included in the context, used to determine reference
+   *     structure and bindings
+   * @param row the row whose values are mapped
+   * @return a mutable map keyed by column identifier; reference columns are nested maps or lists
+   */
   public static Map<String, Object> fromRow(List<Column> columns, Row row) {
-    Map<String, Object> map = new LinkedHashMap<>();
-    for (Column c : columns) {
-      if (c.isReference()) {
-        map.put(c.getIdentifier(), getRefFromRow(row, c));
-      } else if (c.isFile()) {
-        // skip file
-      } else {
-        map.put(c.getIdentifier(), row.get(c));
-      }
+    Map<String, Object> context = new HashMap<>();
+    for (Column column : columns) {
+      updateContext(context, row, column);
     }
-    addJavaScriptBindings(columns, map);
-    return map;
+
+    addJavaScriptBindings(context, columns);
+
+    return context;
+  }
+
+  public static void updateContext(Map<String, Object> context, Row row, Column column) {
+    if (column.isReference()) {
+      context.put(column.getIdentifier(), getRefFromRow(row, column));
+    } else if (column.isFile()) {
+      // skip file
+    } else {
+      context.put(column.getIdentifier(), row.get(column));
+    }
   }
 
   private static Object getRefFromRow(Row row, Column c) {
@@ -54,9 +74,6 @@ public class JavascriptContextBuilder {
       Map<String, Object> result = new LinkedHashMap<>();
       for (Reference ref : c.getReferences()) {
         if (!ref.isOverlapping()) {
-          List<String> path = new ArrayList();
-          path.add(c.getIdentifier());
-          path.addAll(ref.getPath());
           putMap(result, ref.getPath(), row.get(ref.getColumnName(), ref.getPrimitiveType()));
         }
       }
@@ -76,16 +93,16 @@ public class JavascriptContextBuilder {
     }
   }
 
-  private static void addJavaScriptBindings(List<Column> columns, Map<String, Object> values) {
+  private static void addJavaScriptBindings(Map<String, Object> context, List<Column> columns) {
     if (columns.isEmpty()) return;
-    Column column = columns.get(0);
+    Column column = columns.getFirst();
     if (column.getTable() == null) return;
     if (column.getSchema() == null) return;
     if (column.getSchema().getDatabase() == null) return;
     Map<String, Supplier<Object>> bindings =
         column.getSchema().getDatabase().getJavaScriptBindings();
     for (String key : bindings.keySet()) {
-      values.put(key, bindings.get(key).get());
+      context.put(key, bindings.get(key).get());
     }
   }
 }
